test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_21.k
base = 1

schema Data:
    [str]: int
    
data = Data {
    **base
    key1: 1
}